--- a/autos.html
+++ b/autos.html
@@ -1,10 +1,10 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Consultar Estado de Cuenta</title>
+    <title>Autos</title>
     <link rel="stylesheet" href="css/style3.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -61,14 +61,8 @@
         </div>
     </div>
     <!-- Fin menú -->    
-    <div class="main-container">
-        <div class="main-header">
-            <h2>Estado de Cuenta</h2>            
-        </div>
-        <div class="btn btn-fant btn-med">
-            Descargar documento
-        </div>
-        <img src="./img/documento.png" class="img-doc"">
+    <div class="main-container">        
+        coño
     </div>
 </body>
 </html>
