--- a/base_incidencias_residente.html
+++ b/base_incidencias_residente.html
@@ -4,71 +4,133 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Incidencias  Residente</title>
-    <link rel="stylesheet" href="css/style.css">
+    <title>Incidencias Residente</title>
+    <link rel="stylesheet" href="css/style3.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200&display=swap" rel="stylesheet">
 </head>
-<body class="fondo-claro">
+<body class="claro">
     <!-- Menú -->
-    <nav>
-        <ul>
-            <li>
-            <a href="index.aspx"><img src="./img/logo_sin_fondo.png"></a>
-            </li>
-            <li>
-            <!-- Chat Administracion -->
-            <a href="chat_administracion_residente.html"><img src="./img/administracion.png" alt=""></a>
-            </li>
-            <li>
-                <!-- Chat comite -->
-                <a href="chat_comite_residente.html"><img src="./img/comite.png" alt=""></a>
-            </li>
-            <li>
-                <a href="balance_residente.html"><img src="./img/balance.png" alt=""></a>
-            </li>
-            <li>
-                <a href="tramites_residente.html"><img src="./img/tramites.png" alt=""></a>
-            </li>
-            <!-- Quité incidencias por ser la ventana actual -->
-
-            <li>
-                <a href="miembros_unidad.html"><img src="./img/cargadatos.png" alt=""></a>
-            </li>
-            <li>
-                <a href="editar_cuenta.aspx"><img src="./img/perfil.png" alt=""></a>
-            </li>
-        </ul>
-    </nav>
-
-    <!-- Cuerpo -->
-    <div class="container">
-        <div class="container-tramites enlace_blanco">
-            <h1>Incidencias</h1>
-            <p>Haga click en el la incidencia para ver el hilo de la incidecia</p>
-            <table>
-                <thead>
-                <th>Incidencia</th>
-                <th>Descripción</th>
-                <th>Estado</th>
-                </thead>
-                <tbody>
-                    <tr>
-
-                        <!-- detalle tramite en el tr -->
-                        <td>No. incidencia</td>
-                        <td>XXXXXXXXXX</td>
-                        <td>Abierto/Cerrado</td>
-                    </tr>
-                    <tr>
-
-                        <!-- detalle tramite en el tr -->
-                        <td><a href="consultar_hilo_incidencia.html">asd</a></td>
-                        <td></td>
-                        <td></td>
-                    </tr>
-
-                </tbody>
-            </table>
+    <div class="sticky">
+        <div class="menu-container">
+            <div class="menu">
+                <ul>
+                    <a href="">
+                        <img class="menu-logo" src="./img/logo_contorno.png" alt="">
+                    </a>
+                    <a href="">
+                        <li>
+                            <img src="./img/tramites.png" alt="">
+                            <p>Trámites</p>
+                        </li>
+                    </a>
+                    <a href="">
+                        <li>
+                            <img src="./img/incidencias.png" alt="">
+                            <p>Incidencias</p>
+                        </li>
+                    </a>
+                    <a href="">
+                        <li>
+                            <img src="./img/estado cuenta.png" alt="">
+                            <p>Estado de cuenta</p>
+                        </li>
+                    </a>
+                    <a href="">
+                        <li>
+                            <img src="./img/solicitudes.png" alt="">
+                            <p>Solicitudes</p>
+                        </li>
+                    </a>
+                    <a href="">
+                        <li>
+                            <img src="./img/cargadatos.png" alt="">
+                            <p>Cargar datos</p>
+                        </li>
+                    </a>
+                </ul>
+                <a href="">
+                    <div class="menu-perfil">
+                        <img src="./img/perfil.png" alt="">
+                        <p>Perfil</p>
+                    </div>
+                </a>
+            </div>
+            <div class="menu-hr"></div>
         </div>
+    </div>
+    <!-- Fin menú -->    
+    <div class="solicitudes-container">
+        <div class="solicitudes-header">
+            <h2>Incidencias</h2>
+            <h3>Haga click en la incidencia para ver el hilo</h3>
+        </div>
+        <table class="solicitudes-table">
+            <thead>
+                <tr>
+                    <th>Incidencia</th>
+                    <th>Descripción</th>
+                    <th>Estado</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>No. Incidencia</td>
+                    <td>Lorem</td>
+                    <td>
+                        <div class="btn-table btn-aceptado">
+                            Abierto
+                        </div>
+                    </td>
+                </tr>
+                <tr>
+                    <td>No. Incidencia</td>
+                    <td>Lorem</td>
+                    <td>
+                        <div class="btn-table btn-declinado">
+                            Cerrado
+                        </div>
+                    </td>
+                </tr>
+                <tr>
+                    <td>No. Incidencia</td>
+                    <td>Lorem</td>
+                    <td>
+                        <div class="btn-table btn-aceptado">
+                            Abierto
+                        </div>
+                    </td>
+                </tr>
+                <tr>
+                    <td>No. Incidencia</td>
+                    <td>Lorem</td>
+                    <td>
+                        <div class="btn-table btn-declinado">
+                            Cerrado
+                        </div>
+                    </td>
+                </tr>                   
+                <tr>
+                    <td>No. Incidencia</td>
+                    <td>Lorem</td>
+                    <td>
+                        <div class="btn-table btn-aceptado">
+                            Abierto
+                        </div>
+                    </td>
+                </tr>
+                <tr>
+                    <td>No. Incidencia</td>
+                    <td>Lorem</td>
+                    <td>
+                        <div class="btn-table btn-declinado">
+                            Cerrado
+                        </div>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
     </div>
 </body>
 </html>
