--- a/generar_informe.html
+++ b/generar_informe.html
@@ -1,14 +1,19 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Consultar Estado de Cuenta</title>
+    <title>Generar Informes</title>
     <link rel="stylesheet" href="css/style3.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.css">
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.min.js"></script>
 </head>
 <body class="claro">
     <!-- Menú -->
@@ -49,6 +54,18 @@
                             <p>Cargar datos</p>
                         </li>
                     </a>
+                    <a href="">
+                        <li>
+                            <img src="./img/checklist-blanco.png" alt="">
+                            <p>Informes</p>
+                        </li>
+                    </a>
+                    <a href="">
+                        <li>
+                            <img src="./img/comunicacion-blanco.png" alt="">
+                            <p>Foro</p>
+                        </li>
+                    </a>
                 </ul>
                 <a href="">
                     <div class="menu-perfil">
@@ -60,15 +77,28 @@
             <div class="menu-hr"></div>
         </div>
     </div>
-    <!-- Fin menú -->    
+    <!-- Fin menú -->
+    <!-- Cuerpo -->
     <div class="main-container">
         <div class="main-header">
-            <h2>Estado de Cuenta</h2>            
+            <h2>Generar Informe</h2>
+            <h3>Rango de Fechas:</h3>
         </div>
-        <div class="btn btn-fant btn-med">
-            Descargar documento
+        <div class="main-body">
+            <div class="flex2">
+                <div class="div-oscuro">
+                    <p class="letra-mediana mediana-gruesa">Inicio:</p>
+                    <input type="date" class="input-date" name="" id="">
+                </div>
+                <div class="div-oscuro">
+                    <p class="letra-mediana mediana-gruesa">Final:</p>
+                    <input type="date" class="input-date" name="" id="">
+                </div>
+            </div>
+            <div class="main-header">
+                <button class="btn btn-fant margin-auto">Generar</button>
+            </div>
         </div>
-        <img src="./img/documento.png" class="img-doc"">
     </div>
 </body>
 </html>
