--- a/informes.html
+++ b/informes.html
@@ -5,53 +5,111 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Informes</title>
-    <link rel="stylesheet" href="./css/style3.css">
+    <link rel="stylesheet" href="css/style3.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200&display=swap" rel="stylesheet">
 </head>
 <body class="claro">
-    <nav>
-        <ul>
-            <li>
-                <a href="index.aspx"><img src="./img/logo_sin_fondo.png"></a>
-                </li>
-                <li>
-                <!-- Chat Administracion -->
-                <a href="chat_administracion_residente.html"><img src="./img/administracion.png" alt=""></a>
-                </li>
-                <li>
-                    <!-- Chat comite -->
-                    <a href="chat_comite_residente.html"><img src="./img/comite.png" alt=""></a>
-                </li>
-                <li>
-                    <a href="balance_residente.html"><img src="./img/balance.png" alt=""></a>
-                </li>
-                <li>
-                    <a href="tramites_residente.html"><img src="./img/tramites.png" alt=""></a>
-                </li>
-                <!-- Quité incidencias por ser la ventana actual -->
-    
-                <li>
-                    <a href="miembros_unidad.html"><img src="./img/cargadatos.png" alt=""></a>
-                </li>
-                <li>
-                    <a href="editar_cuenta.aspx"><img src="./img/perfil.png" alt=""></a>
-                </li>
-        </ul>
-    </nav>
-    <div class="container">
-        <div class="cabecera">
-            <h1>Informe ingresos-egresos</h1>
-            <h4>Haga click en el registro para ver los detalles</h4>
-        </div>
-        <div class="tabla-informes">
-            <div class="col">
-                <p>Informe</p>
-                <p>No. informe</p>
+    <!-- Menú -->
+    <div class="sticky">
+        <div class="menu-container">
+            <div class="menu">
+                <ul>
+                    <a href="">
+                        <img class="menu-logo" src="./img/logo_contorno.png" alt="">
+                    </a>
+                    <a href="">
+                        <li>
+                            <img src="./img/tramites.png" alt="">
+                            <p>Trámites</p>
+                        </li>
+                    </a>
+                    <a href="">
+                        <li>
+                            <img src="./img/incidencias.png" alt="">
+                            <p>Incidencias</p>
+                        </li>
+                    </a>
+                    <a href="">
+                        <li>
+                            <img src="./img/estado cuenta.png" alt="">
+                            <p>Estado de cuenta</p>
+                        </li>
+                    </a>
+                    <a href="">
+                        <li>
+                            <img src="./img/solicitudes.png" alt="">
+                            <p>Solicitudes</p>
+                        </li>
+                    </a>
+                    <a href="">
+                        <li>
+                            <img src="./img/cargadatos.png" alt="">
+                            <p>Cargar datos</p>
+                        </li>
+                    </a>
+                    <a href="">
+                        <li>
+                            <img src="./img/checklist-blanco.png" alt="">
+                            <p>Informes</p>
+                        </li>
+                    </a>
+                    <a href="">
+                        <li>
+                            <img src="./img/comunicacion-blanco.png" alt="">
+                            <p>Foro</p>
+                        </li>
+                    </a>
+                </ul>
+                <a href="">
+                    <div class="menu-perfil">
+                        <img src="./img/perfil.png" alt="">
+                        <p>Perfil</p>
+                    </div>
+                </a>
             </div>
-            <div class="col">
-                <p>Fecha</p>
-                <p>MM/AAAA</p>
-            </div>
+            <div class="menu-hr"></div>
         </div>
+    </div>
+    <!-- Fin menú -->
+    <div class="solicitudes-container">
+        <div class="solicitudes-header">
+            <h2>Informe Ingresos-Egresos</h2>
+            <h3>Haga click en el registro para ver los detalles</h3>
+        </div>
+        <table class="solicitudes-table">
+            <thead>
+                <tr>
+                    <th>Informe</th>
+                    <th>Fecha</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>No. Solicitud</td>
+                    <td>Lorem</td>                    
+                </tr>
+                <tr>
+                    <td>No. Solicitud</td>
+                    <td>Lorem</td>
+                </tr>
+                <tr>
+                    <td>No. Solicitud</td>
+                    <td>Lorem</td>
+                </tr>
+                <tr>
+                    <td>No. Solicitud</td>
+                    <td>Lorem</td>
+                </tr>
+                <tr>
+                    <td>No. Solicitud</td>
+                    <td>Lorem</td>
+                    </td>
+                </tr>                    
+            </tbody>
+        </table>
+        <button class="btn btn-fant margin-top">Generar Informe</button>
     </div>
 </body>
 </html>
